gccida/g2/register_operand
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/recog.c:1504:32: error: must use 'enum' tag to refer to type 'machine_mode'
int  register_operand( rtx op, machine_mode mode) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/recog.c:1518:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)op->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/recog.c:1521:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v2] == MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/recog.c:1528:12: error: expected identifier or '('
 struct op = op->fld[0].rtx; 
           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/register_operand/src/obj/recog.o] Error 1
